--- a/HomeWork2/Code/comp9417_hw2.ipynb
+++ b/HomeWork2/Code/comp9417_hw2.ipynb
@@ -43,7 +43,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "# Code for question 1\n",
@@ -66,7 +70,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "# fixed random seed\n",
@@ -84,8 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "def load_data(path):\n",
@@ -128,8 +140,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
+    "pycharm": {
+     "is_executing": false
+    },
     "scrolled": true
    },
    "outputs": [
@@ -141,18 +156,18 @@
       "---------------------------------------------------------------------------------------------------------\n",
       "   Dataset    |   5%   |  10%   |  15%   |  20%   |  25%   |  30%   |  35%   |  40%   |  45%   |  50%   |\n",
       "---------------------------------------------------------------------------------------------------------\n",
-      "australian    | 79.86% | 81.29% | 82.91% | 82.02% | 82.17% | 81.45% | 82.03% | 83.34% | 83.33% | 82.33% |\n",
-      "balance-scale | 75.67% | 75.99% | 76.98% | 77.92% | 77.30% | 78.10% | 77.95% | 77.62% | 78.09% | 77.45% |\n",
-      "hypothyroid   | 99.42% | 99.52% | 99.20% | 99.28% | 99.23% | 99.31% | 99.34% | 99.52% | 99.52% | 99.47% |\n",
+      "australian    | 72.61% | 74.35% | 75.36% | 77.39% | 77.83% | 79.71% | 83.77% | 81.16% | 80.72% | 83.48% |\n",
+      "balance-scale | 69.92% | 75.04% | 69.12% | 74.24% | 74.40% | 75.52% | 78.08% | 75.68% | 77.92% | 76.64% |\n",
+      "hypothyroid   | 94.94% | 96.31% | 97.77% | 99.18% | 99.20% | 99.42% | 99.42% | 99.52% | 99.34% | 99.20% |\n",
       "\n",
       "\n",
       "                          BernoulliNB with priors                          \n",
       "---------------------------------------------------------------------------------------------------------\n",
       "   Dataset    |   5%   |  10%   |  15%   |  20%   |  25%   |  30%   |  35%   |  40%   |  45%   |  50%   |\n",
       "---------------------------------------------------------------------------------------------------------\n",
-      "australian    | 79.84% | 81.14% | 81.28% | 81.29% | 82.74% | 82.16% | 82.16% | 82.74% | 82.74% | 82.74% |\n",
-      "balance-scale | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% |\n",
-      "hypothyroid   | 92.26% | 92.23% | 92.23% | 92.18% | 92.21% | 92.23% | 92.26% | 92.26% | 92.26% | 92.23% |\n",
+      "australian    | 73.48% | 79.86% | 81.45% | 80.43% | 79.71% | 79.86% | 79.86% | 81.16% | 82.17% | 81.88% |\n",
+      "balance-scale | 46.08% | 46.08% | 46.08% | 46.08% | 46.24% | 46.08% | 46.08% | 46.24% | 46.24% | 46.08% |\n",
+      "hypothyroid   | 91.38% | 91.81% | 92.23% | 92.23% | 92.23% | 92.26% | 92.23% | 92.23% | 92.23% | 92.23% |\n",
       "\n",
       "\n"
      ]
@@ -214,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
