--- a/HomeWork2/Report/report.tex
+++ b/HomeWork2/Report/report.tex
@@ -12,7 +12,8 @@
     \subsection{Part A}\label{subsec:part-a}
     \includegraphics[scale=0.18]{result.jpeg}
     \subsection{Part B}\label{subsec:part-b}
-    I think (1), (2) statements are true.
-
-
+    I think (3), (5) statements are true.
+    \subsection{Part C}\label{subsec:part-c}
+    I choose (1).
+    \section{Q2}\label{sec:q2}
 \end{document}
