--- a/HomeWork2/Code/comp9417_hw2.ipynb
+++ b/HomeWork2/Code/comp9417_hw2.ipynb
@@ -156,18 +156,27 @@
       "---------------------------------------------------------------------------------------------------------\n",
       "   Dataset    |   5%   |  10%   |  15%   |  20%   |  25%   |  30%   |  35%   |  40%   |  45%   |  50%   |\n",
       "---------------------------------------------------------------------------------------------------------\n",
-      "australian    | 72.61% | 74.35% | 75.36% | 77.39% | 77.83% | 79.71% | 83.77% | 81.16% | 80.72% | 83.48% |\n",
-      "balance-scale | 69.92% | 75.04% | 69.12% | 74.24% | 74.40% | 75.52% | 78.08% | 75.68% | 77.92% | 76.64% |\n",
-      "hypothyroid   | 94.94% | 96.31% | 97.77% | 99.18% | 99.20% | 99.42% | 99.42% | 99.52% | 99.34% | 99.20% |\n",
+      "australian    | 72.61% | 74.63% | 75.52% | 77.53% | 77.97% | 79.86% | 83.05% | 81.29% | 80.14% | 82.91% |\n",
+      "balance-scale | 70.10% | 72.47% | 71.20% | 75.69% | 73.77% | 75.67% | 77.74% | 75.99% | 78.09% | 76.98% |\n",
+      "hypothyroid   | 94.94% | 96.31% | 97.77% | 99.18% | 99.21% | 99.42% | 99.42% | 99.52% | 99.34% | 99.20% |\n",
       "\n",
       "\n",
       "                          BernoulliNB with priors                          \n",
       "---------------------------------------------------------------------------------------------------------\n",
       "   Dataset    |   5%   |  10%   |  15%   |  20%   |  25%   |  30%   |  35%   |  40%   |  45%   |  50%   |\n",
       "---------------------------------------------------------------------------------------------------------\n",
-      "australian    | 73.48% | 79.86% | 81.45% | 80.43% | 79.71% | 79.86% | 79.86% | 81.16% | 82.17% | 81.88% |\n",
-      "balance-scale | 46.08% | 46.08% | 46.08% | 46.08% | 46.24% | 46.08% | 46.08% | 46.24% | 46.24% | 46.08% |\n",
+      "australian    | 73.47% | 79.85% | 81.72% | 80.43% | 79.69% | 79.84% | 80.12% | 81.14% | 82.16% | 81.28% |\n",
+      "balance-scale | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% |\n",
       "hypothyroid   | 91.38% | 91.81% | 92.23% | 92.23% | 92.23% | 92.26% | 92.23% | 92.23% | 92.23% | 92.23% |\n",
+      "\n",
+      "\n",
+      "                      BernoulliNB without the priors                       \n",
+      "---------------------------------------------------------------------------------------------------------\n",
+      "   Dataset    |   5%   |  10%   |  15%   |  20%   |  25%   |  30%   |  35%   |  40%   |  45%   |  50%   |\n",
+      "---------------------------------------------------------------------------------------------------------\n",
+      "australian    | 73.62% | 79.27% | 81.44% | 78.98% | 78.40% | 79.69% | 78.52% | 79.83% | 80.41% | 80.41% |\n",
+      "balance-scale | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% | 46.08% |\n",
+      "hypothyroid   | 83.88% | 79.59% | 77.44% | 74.79% | 73.12% | 65.05% | 53.60% | 51.30% | 51.09% | 50.26% |\n",
       "\n",
       "\n"
      ]
@@ -209,7 +218,8 @@
     "    print('\\n')\n",
     "\n",
     "test_method(DecisionTreeClassifier(random_state=0),'')\n",
-    "test_method(BernoulliNB(),'with priors')"
+    "test_method(BernoulliNB(),'with priors')\n",
+    "test_method(BernoulliNB(fit_prior=False),'without the priors')"
    ]
   }
  ],
