--- a/HomeWork2/Report/report.tex
+++ b/HomeWork2/Report/report.tex
@@ -16,4 +16,9 @@
     \subsection{Part C}\label{subsec:part-c}
     I choose (1).
     \section{Q2}\label{sec:q2}
+    \subsection{Part A}\label{subsec:part-a2}
+    My accuracy score for the test dataset is 82.77\%. \\
+    My accuracy score for the training dataset is 85.65\%.
+    \subsection{Part B}\label{subsec:part-b2}
+
 \end{document}
