--- a/HomeWork2/Report/report.tex
+++ b/HomeWork2/Report/report.tex
@@ -20,5 +20,18 @@
     My accuracy score for the test dataset is 82.77\%. \\
     My accuracy score for the training dataset is 85.65\%.
     \subsection{Part B}\label{subsec:part-b2}
+    The min\_samples\_leaf number of 5 to 7 give the optimal
+    result, this can be observed by compare the auc score in
+    the part c's plots, pick the maximum score with the lowest varience.
+    \subsection{Part C}\label{subsec:part-c2}
+    \begin{center}
+                Plot For Test Dataset
+    \end{center}
+    \includegraphics[scale=0.8]{../Plot/plot_test.png}
+     \begin{center}
+                Plot For Train Dataset
+    \end{center}
+    \includegraphics[scale=0.8]{../Plot/plot_train.png}
+    \subsection{Part D}\label{subsec:part-d}
 
 \end{document}
